# Midnight-Watch-Browser

./: .gitignore  LICENSE  homepage.html  package-lock.json  package.json  qttestbrowser.py
CEF TUTORIAL/cef_binary_144.0.6+g5f7e671+chromium-144.0.7559.59_windows64/tests/cefsimple/: simple_app.cc
Main_Repo/: CMakeLists.txt
Main_Repo/resources/: important_commands.txt  notestoselfforcommit.md  requirements.txt
Main_Repo/scripts/: setup_arch.sh  setup_fedora.sh
Main_Repo/src/: backgroundProcessHandler.py  commandsforexe.txt  cookieManager.py  engine_bridge.py  extensionmanager.py  main.py  network_controller.py  path_utils.py  requirements.txt  test-bridge.py  test.py  ui_core.py
Main_Repo/src/Javascript_Executables/: censorBlocker.js  embeddedadblocker.js  youtubeBlocker.js
Main_Repo/src/cpp-core/: gatekeeper.cpp
Main_Repo/src/data/: actionToggles.json  bookmarks.json  bootupTabs.json  colourProfiles.json  currentProfile.json  engineData.json  extensionList.json  profileData.json  userData.json
Main_Repo/src/testing/: DisplayStuff.py  cookiesTest.py  test.py
Main_Repo/src/ui/: homepage.html  settings.html
Old_Data/: antiFingerprinting.js  embeddedadblocker.js  evidenceofnodejsattempt.js  extensionList.json  extensionmanager.py  main copy.py  youtubeBlocker.js
Old_Data/Python-Testing/: README.md  homepage.html  qttestbrowser.py
Python-Testing/: colourProfiles.json  qtBrowserTest3.py  qttestbrowsertest2.py
Python-Testing/data/: colourProfiles.json  userData.json
